# example-plugin

./: CITATION.cff  LICENSE  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: plugin_preview.yml
.napari/: DESCRIPTION.md  config.yml
example_plugin/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
