[metadata]
name = example-plugin
author = Draga Doncila Pop
author_email = ddoncila@gmail.com
license = BSD-3
url = https://github.com/DragaDoncila/example-plugin
description = An example plugin for demo purposes
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/DragaDoncila/example-plugin/issues
    Documentation = https://github.com/DragaDoncila/example-plugin#README.md
    Source Code = https://github.com/DragaDoncila/example-plugin
    User Support = https://github.com/DragaDoncila/example-plugin/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy

[options.extras_require]
dev = pytest

[options.entry_points] 
napari.plugin = 
    example-plugin = example_plugin
